--- a/config.toml
+++ b/config.toml
@@ -56,16 +56,11 @@ anchor = "smart"
 
 [languages]
 [languages.en]
-title = "Goldydocs"
-description = "A Docsy example site"
+title = "Perspective API"
+description = "Documentation for Perspeective. API"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
-# [languages.no]
-# title = "Goldydocs"
-# description = "Docsy er operativsystem for skyen"
-# languageName ="Norsk"
-# contentDir = "content/no"
 time_format_default = "02.01.2006"
 time_format_blog = "02.01.2006"
 
