deploy demo search

--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ github_project_repo = "https://github.com/conversationai/perspectiveapi"
 # github_subdir = ""
 
 # Google Custom Search Engine ID. Remove or comment out to disable search.
-# gcs_engine_id = "011737558837375720776:fsdu1nryfng"
+gcs_engine_id = "011737558837375720776:fsdu1nryfng"
 
 # User interface configuration
 [params.ui]
